--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Nicol Tincani",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
