--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "connect-mongo": "^5.1.0",
+    "connect-mongodb-session": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
