Test getdata from external API

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Nicol Tincani",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "connect-mongodb-session": "^5.0.0",
     "cookie-parser": "^1.4.6",
